2007-08-29  Steve Langasek  <vorlon@debian.org>

	* libpam/pam_modutil_getgrgid.c, libpam/pam_modutil_getgrnam.c,
	libpam/pam_modutil_getpwnam.c, libpam/pam_modutil_getpwuid.c,
	libpam/pam_modutil_getspnam.c: don't use pthread mutexes in libpam
	unnecessarily; this avoids linking problems on non-Linux
	platforms.

	* modules/pam_listfile/pam_listfile.c, modules/pam_listfile/README,
	modules/pam_listfile/pam_listfile.8,
	modules/pam_listfile/pam_listfile.8.xml: add a 'quiet' option to
	avoid logging errors any time a user is refused service by this
	module.

2007-08-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_rhosts/pam_rhosts_auth.c: buflen needs to be size_t.
	(__icheckhost): Cast to int32_t to fix limited range error.

	* modules/pam_cracklib/pam_cracklib.c: Mark cracklib_dictpath
	as const.

2007-08-29  Steve Langasek <vorlon@debian.org>

	* modules/pam_rhosts/pam_rhosts_auth.c: getline returns -1 at
	EOF, not 0.  Check accordingly to fix an infinite loop.  Thanks
	to Stephan Springl <springl-rhosts@bfw-online.de> for catching
	this.

2007-08-28  Steve Langasek <vorlon@debian.org>

	* configure.in: call AC_CHECK_HEADERS instead of AC_CHECK_HEADER
	for crack.h, so we get a HAVE_CRACK_H define.
	* modules/pam_cracklib/pam_cracklib.c: don't copy around the
	cracklib dictpath into a fixed-width buffer, when we can just
	point at the existing strings; and allow users to override the
	default cracklib path with -DCRACKLIB_DICT, required for
	compatibility with cracklib 2.7.

2007-08-27  Steve Langasek <vorlon@debian.org>

	* modules/pam_limits/pam_limits.c: when building on non-Linux
	systems, give a warning only, not an error; no one seems to
	remember why this error was here in the first place, but leave
	something in that might still grab the attention of non-Linux
	users.
	Patch from Michal Suchanek <hramrach_l@centrum.cz>.
	* configure.in, modules/pam_rhosts/pam_rhosts_auth.c: check for
	the presence of net/if.h before using, required for Hurd